// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: condition.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

if (__DEV__) {
  console.log('foo'); // eslint-disable-line no-console
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

if (process.env.NODE_ENV !== "production") {
  console.log('foo'); // eslint-disable-line no-console
}
`;

exports[`matches expected output: objectKey.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

declare var __DEV__: string;

module.exports = {
  rules: {},
  globals: {
    __DEV__: 'value',
    [__DEV__]: "this can be changed because it's dynamic",
    key: __DEV__,
  },
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

module.exports = {
  rules: {},
  globals: {
    __DEV__: 'value',
    [process.env.NODE_ENV !== "production"]: "this can be changed because it's dynamic",
    key: process.env.NODE_ENV !== "production"
  }
};
`;

exports[`matches expected output: ternary.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

// eslint-disable-next-line no-unused-vars
const dev = __DEV__ ? 'true' : 'false';

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

// eslint-disable-next-line no-unused-vars
const dev = process.env.NODE_ENV !== "production" ? 'true' : 'false';
`;

exports[`matches expected output: valid-code.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

export default async function test(a: Object): Object {
  return {
    ...a,
    test_1: a?.b ?? 'default',
    test_2: !!__DEV__,
    test_3: await 'this',
  };
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = test;

function _objectSpread(target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i] != null ? arguments[i] : {}; var ownKeys = Object.keys(source); if (typeof Object.getOwnPropertySymbols === 'function') { ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function (sym) { return Object.getOwnPropertyDescriptor(source, sym).enumerable; })); } ownKeys.forEach(function (key) { _defineProperty(target, key, source[key]); }); } return target; }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

async function test(a) {
  var _ref;

  return _objectSpread({}, a, {
    test_1: (_ref = a === null || a === void 0 ? void 0 : a.b) !== null && _ref !== void 0 ? _ref : 'default',
    test_2: !!(process.env.NODE_ENV !== "production"),
    test_3: await 'this'
  });
}
`;
